--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,14 +1,14 @@
 {
     "version": "2.0.0",
     "tasks": [{
-        "label": "Compile", // 任务名称，与launch.json的preLaunchTask相对应
+        "label": "compile_server", // 任务名称，与launch.json的preLaunchTask相对应
         "command": "bazel",   // 要使用的编译器，C++用g++
         "args": [
             "build",
             "-c",
             "dbg",    // 指定输出文件名，不加该参数则默认输出a.exe，Linux下默认a.out
             "--spawn_strategy=local",
-            "//:main"
+            "//:server"
         ], // 编译的命令，其实相当于VSC帮你在终端中输了这些东西
         "type": "process", // process是vsc把预定义变量和转义解析后直接全部传给command；shell相当于先打开shell再输入命令，所以args还会经过shell再解析一遍
         "group": {
