--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
-bazel-testlogs
-bazel-out
-bazel-bin
-bazel-agent
-cmake-build-debug
+bazel-*
+cmake-build-*
 .vscode
 .idea
 .clwb
-CMakeLists.txt
+/.clion.source.upload.marker
