--- a/epoll/BUILD
+++ b/epoll/BUILD
@@ -1,7 +1,9 @@
 cc_library(
     name = "epoll_server",
-    hdrs = ["decoder.h", "epoll_server.h"],
-    srcs = ["decoder.cpp", "epoll_server.cpp"],
+#    hdrs = ["decoder.h", "epoll_server.h", "channal_pipe_context.h"],
+#    srcs = ["decoder.cpp", "epoll_server.cpp", "channal_pipe_context.cpp"],
+    srcs = glob(["*.cpp"]),
+    hdrs = glob(["*.h"]),
     deps = [
         "//:common",
         "//:base_server",
